--- a/src/app.css
+++ b/src/app.css
@@ -4,11 +4,11 @@
 
 @layer components {
   .question_input {
-    @apply mt-1 pl-3 pr-8 py-1 font-medium text-gray-700 border-gray-300 text-base sm:text-sm 
+    @apply pl-3 pr-8 py-1 font-medium text-gray-700 border-gray-300 text-base sm:text-sm 
     focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 rounded-md;
   }
   .btn {
-    @apply inline-flex items-center px-4 py-2 border border-transparent
-    rounded-md shadow-sm text-base sm:text-sm font-medium ;
+    @apply px-4 border border-transparent
+    rounded-md shadow-sm text-base sm:text-sm font-medium text-center
   }
 }
